  long requests whose first two characters form an existing short request
  are ignored instead of being interpreted as short requests. Also string
  and number register references are interpreted at any position of a
  long request name in this level.
* [nt]roff: The warning category "missing" is now available; it includes
  warnings about missing required arguments to requests.
* troff: The ".trimat", ".bleedat, and ".cropat" " requests have been added
  to include advice about the "TrimBox", "BleedBox", and "CropBox" page
  parameters to a PDF distiller command, particularly for PDF/X generation.
* dpost: The "-M" option has been added. It can be used to print cut marks
  ("-M cut"), registration marks ("-M registration"), or both cut marks and
  registration marks ("-M cut:registration") in combination with the
  ".trimat" troff request.
* [nt]roff: The ".af" request now handles long register names correctly.
* troff: Kerning now works correctly in combination with leaders and
  fields.
* troff: The ".tm" and ".write" requests now correctly handle locale-
  dependent input characters as well as one-character escape sequences
  that are interpreted in copy mode such as "\&".
* [nt]roff: The "-msafe" macro now correctly removes the ".do pso",
  ".do open", and ".do opena" requests in -x1 (default) mode. They
  were previously removed in -x2 mode only.

Release 051212
* [nt]roff: The ".pso" request has been added; it reads the output of
  a command as input to troff.
* [nt]roff: The ".tmc" request has been added; it works like ".tm" but
  does not terminate the message with a newline.
* [nt]roff: The ".open", ".opena", ".write", ".writec", and ".close"
  requests have been added. They work like ".tm" but write to a named
  file.
* [nt]roff: The ".warn" request has been added; it enables additional
  warning messages. The "\n[.warn]" register prints bits representing
  the warning categories that are currently enabled.